--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.5.4",
-    "@strapi/plugin-users-permissions": "4.5.4",
     "@strapi/plugin-i18n": "4.5.4",
-    "mysql": "2.18.1"
+    "@strapi/plugin-users-permissions": "4.5.4",
+    "@strapi/provider-upload-cloudinary": "^4.5.4",
+    "@strapi/strapi": "4.5.4",
+    "mysql": "2.18.1",
+    "strapi-provider-upload-cloudinary": "^3.6.11"
   },
   "author": {
     "name": "A Strapi developer"
